# CAP2024

./: README.md
Linear/: CMakeLists.txt  contrast  contrast.cpp
MPI/: CMakeLists.txt  contrast-enhancement.cpp  contrast.cpp  mpi-histogram.cpp
Open+MPI/: CMakeLists.txt  contrast-enhancement.cpp  contrast.cpp  mpi_openmp_histogram.cpp
OpenMP/: CMakeLists.txt  contrast-enhancement.cpp  contrast.cpp  openmp-histogram.cpp
